--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
 	"files.associations": {
 		"so_long.h": "c",
 		"get_next_line_bonus.h": "c",
-		"fcntl.h": "c"
+		"fcntl.h": "c",
+		"map": "c",
+		"format": "c"
 	}
 }
